--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Markdown编辑器</title>
     <link id="hljsTheme" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css">  
-   <link id="theme" rel="stylesheet" href="./light.css">
+   <link id="theme" rel="stylesheet" href="./style/light.css">
 </head>
 <body>
     <div class="header-container">
@@ -13,7 +13,7 @@
             <h1>Markdown编辑器</h1>
             <div class="header-button">
                 <button class="toogleTheme">切换主题</button>
-                <button>导出文档</button>
+                <button class="export">导出文档</button>
             </div>
         </header>
         <div class="toolbar">
