--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="edit-container">
         <div class="edit">
             <h2 class="h2">编辑区</h2>
-            <textarea class="input"></textarea>
+            <textarea class="input" placeholder="自动保存已开启，关闭页面也不会丢失内容"></textarea>
         </div>
         <div class="preview">
             <h2 class="h2">预览区</h2>
